@@ -21,6 +21,16 @@ Needs:
     core types (Dimension, Vector)
     sim types (ModelViewTransform)
 
+  i18n in energy-skate-park-html:
+    where did you get i18n.js?
+    why is not in vendor/?
+    where is it imported?
+    example use?
+    why in nls directory?
+    is nls/energy-skate-part-strings.js both fallbacks and config?
+    why is each translation in a subdir on nls/?
+    i18n of DOM vs Easel?
+
 
 Patterns:
 
